--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,4 +84,9 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <WebView
+        android:id="@+id/webLogin"
+        android:layout_width="1sp"
+        android:layout_height = "1sp" />
 </LinearLayout>
